--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Profile</h1>
-      <h2 class="project-tagline">my web profile</h2>
+      <!--<h2 class="project-tagline">my web profile</h2>
       <a href="https://github.com/ashwinikumarkulkarni/profile" class="btn">View on GitHub</a>
       <a href="https://github.com/ashwinikumarkulkarni/profile/zipball/master" class="btn">Download .zip</a>
-      <a href="https://github.com/ashwinikumarkulkarni/profile/tarball/master" class="btn">Download .tar.gz</a>
+      <a href="https://github.com/ashwinikumarkulkarni/profile/tarball/master" class="btn">Download .tar.gz</a>-->
     </section>
 
     <section class="main-content">
