--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Ashwinikumar Kulkarni, Ph.D.</h1>
+      <h2>Senior Research Associate, Konopka Lab, UT Southwestern Medical Center, Dallas, TX</h2>
       <!--<h2 class="project-tagline">my web profile</h2>
       <a href="https://github.com/ashwinikumarkulkarni/profile" class="btn">View on GitHub</a>
       <a href="https://github.com/ashwinikumarkulkarni/profile/zipball/master" class="btn">Download .zip</a>
@@ -20,9 +21,16 @@
 
     <section class="main-content">
       <h3>
-        Senior Research Associate, Konopka Lab, UT Southwestern Medical Center, Dallas, TX
+        Publications
       </h3>
-
+      <p>FUS regulates transcriptomic landscape causing cardiac hypertrophy-like phenotype. In Preparation.</p>
+      <p>Alternative Splicing and Small RNAs Regulate Early Embryonic Stem Cell Differentiation. In Preparation.</p>
+      <p>Integrative analysis of 111 reference human epigenomes. Nature 2015.</p>
+      <p>Activity-dependent FUS dysregulation disrupts synaptic homeostasis. PNAS 2014.</p>
+      <p>Epigenomic analysis of multilineage differentiation of human embryonic stem cells. Cell 2013.</p>
+      <p>NeuroD1 regulates survival and migration of neuroendocrine lung carcinomas via signaling molecules TrkB and NCAM. PNAS 2013.</p>
+      <p>A highly efficient and effective motif discovery method for ChIP-seq/ChIP-chip data using positional information. Nucleic Acid Research 2012.</p>
+      <p>Colon cancer prediction with genetics profiles using evolutionary techniques. Expert Systems with Applications 2011.</p>
     </section>
 
   
