--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>Profile by ashwinikumarkulkarni</title>
+    <title>Ashwinikumar Kulkarni</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Ashwinikumar Kulkarni, Ph.D.</h1>
-      <h2>Senior Research Associate, Konopka Lab, UT Southwestern Medical Center, Dallas, TX</h2>
+      <h2>Senior Research Associate<br>Konopka Lab, UT Southwestern Medical Center, Dallas, TX</h2>
       <!--<h2 class="project-tagline">my web profile</h2>
       <a href="https://github.com/ashwinikumarkulkarni/profile" class="btn">View on GitHub</a>
       <a href="https://github.com/ashwinikumarkulkarni/profile/zipball/master" class="btn">Download .zip</a>
